--- a/style.css
+++ b/style.css
@@ -59,9 +59,10 @@ footer {
 background-color: black;
 opacity: 0.8;
 width: 100%;
-height: 200px;
+height: 230px;
 text-align: left;
 margin: 0px;
+float: right;
 }
 
 
@@ -207,9 +208,12 @@ background-image: url("apartment.jpg");
 }
 .avatar-flip {
   border-radius: 100px;
+  border-style: groove;
+  padding: 20px;
   overflow: hidden;
   height: 150px;
   width: 150px;
+  float: center;
   position: relative;
   margin: auto;
   top: -60px;
@@ -222,9 +226,11 @@ background-image: url("apartment.jpg");
 }
 .avatar-flip img {
   position: absolute;
+  float: center;
   left: 0;
   top: 0;
   border-radius: 100px;
+  padding: 20px;
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -238,24 +244,56 @@ background-image: url("apartment.jpg");
   -webkit-transform: rotateY(180deg);
   opacity: 0;
 }
-aboutmeh2 {
-  font-size: 32px;
-  font-weight: 600;
+
+.Contributiontable {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.Contributionth {
+  font-weight: bold;
+}
+
+.Contributiontd, .Contributionth {
+  text-align: center;
+  border: 1px solid #dddddd;
+  padding: 8px;
+}
+
+
+.Contributiontr:nth-child(even) {
+  background-color: #dddddd;
+}
+#aboutmeh2 {
+  font-size: 200%;
+  font-weight: bold;
+  text-align:
   margin-bottom: 15px;
   color: #333;
 }
-aboutmeh4 {
-  font-size: 13px;
-  color: #00baff;
+#aboutmeh4 {
+  font-size: 18px;
+  color: rgb(0,186,255);
   letter-spacing: 1px;
   margin-bottom: 25px
 }
-aboutmep {
+#aboutmep {
   font-size: 16px;
   line-height: 26px;
   margin-bottom: 20px;
   color: #666;
 }
 
+#studentid {
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: right;
+  margin-bottom: 10px;
+  color: #666;
+}
 
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
+#email_foot {
+  float: center;
+  text-align: center;
+}
