--- a/style.css
+++ b/style.css
@@ -178,10 +178,9 @@ background-image: url("apartment.jpg");
 }
 
 
-@import url(http://fonts.googleapis.com/css?family=Roboto:900,300);
  aboutmebody{
   background-color: #f0f0f0;
-  font-family: roboto;
+  font-family: serif;
 }
 .container {
   width: 400px;
@@ -189,16 +188,11 @@ background-image: url("apartment.jpg");
   background-color: #fff;
   padding: 0 20px 20px;
   border-radius: 6px;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
   box-shadow: 0 2px 5px rgba(0,0,0,0.075);
-  -webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.075);
-  -moz-box-shadow: 0 2px 5px rgba(0,0,0,0.075);
   text-align: center;
 }
 .container:hover .avatar-flip {
   transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
 }
 .container:hover .avatar-flip img:first-child {
   opacity: 0;
@@ -218,11 +212,7 @@ background-image: url("apartment.jpg");
   margin: auto;
   top: -60px;
   transition: all 0.3s ease-in-out;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
   box-shadow: 0 0 0 13px #f0f0f0;
-  -webkit-box-shadow: 0 0 0 13px #f0f0f0;
-  -moz-box-shadow: 0 0 0 13px #f0f0f0;
 }
 .avatar-flip img {
   position: absolute;
@@ -232,8 +222,6 @@ background-image: url("apartment.jpg");
   border-radius: 100px;
   padding: 20px;
   transition: all 0.3s ease-in-out;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
 }
 .avatar-flip img:first-child {
   z-index: 1;
@@ -241,7 +229,6 @@ background-image: url("apartment.jpg");
 .avatar-flip img:last-child {
   z-index: 0;
   transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
   opacity: 0;
 }
 
