--- a/style.css
+++ b/style.css
@@ -254,7 +254,7 @@ background-image: url("apartment.jpg");
 #aboutmeh2 {
   font-size: 200%;
   font-weight: bold;
-  text-align:
+  text-align: center;
   margin-bottom: 15px;
   color: #333;
 
