--- a/style.css
+++ b/style.css
@@ -1,70 +1,9 @@
-a{
-font-family: "Montserrat", sans-serif;
-font-weight: bold;
-}
-
-a:link, a:visited {
-opacity: 1.0;
-text-decoration: none;
-color: white;
-}
-
-a:hover, a:active {
-opacity: 0.6;
-text-decoration: none;
-color: F9F9F9;
-}
-
-.banner_link{
-background-color: black;
-margin:0px;
-padding: 10px 20px;
-display: inline-block;
-color: white;
-}
-
-.banner{
-position: relative;
-border-radius: 0 0 50px 0;
-margin-top: 0%;
-width: 85%;
-height: 40px;
-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26)
-}
-
-.banner_photo{
-background-color: #cccccc;
-height: 450px;
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-position: relative;
-}
-
-.content_box{
-background-color: #2C2C2C;
-float:center;
-margin-right: 2%;
-margin-left: 2%;
-border-radius: 40px 40px 40px 40px;
-box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.26)
-}
+/* Start of CSS by Ryan */
 
 body {
 margin: 0;
 background-color: #F9F9F9;
 }
-
-footer {
-background-color: black;
-opacity: 0.8;
-width: 100%;
-height: 230px;
-text-align: left;
-margin: 0px;
-float: right;
-}
-
 
 h1 {
 font-size:60px;
@@ -77,8 +16,121 @@ font-size:30px;
 h3 {
 font-size:40px;
 text-align: center;
+color: white;
 }
 
+h4 {
+display: inline;
+color: black;
+font-size: 20px;
+}
+
+h5 {
+text-align: center;
+color: black;
+font-size: 30px;
+}
+
+
+/* Footer properties */
+
+footer {
+background-color: black;
+opacity: 0.8;
+width: 100%;
+height: 230px;
+text-align: left;
+margin: 0px;
+float: right;
+}
+
+.footer_table{
+color: white; 
+margin-left: 30px;
+}
+
+/* End of footer properties */
+
+
+
+/* the properties in this block affect all links on all pages in the website */
+
+a {
+font-family: "Montserrat", sans-serif;
+}
+
+a:link, a:visited {
+color: white;
+text-decoration: none;
+}
+
+a:hover, a:active {
+color: rgb(150,150,150);
+}
+
+/* end of block */
+
+
+/* properties for navigation menu */
+
+.menu_banner{
+overflow: hidden;
+position: fixed;
+top: 0;
+border-radius: 0 0 50px 50px;
+margin-top: 0%;
+height: 40px;
+width: 100%;
+z-index: 1;
+box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+}
+
+.menu_banner a {
+background-color: black;
+text-align: center;
+opacity: 0.85;
+float: left;
+padding-top: 10px;
+display: block;
+width: 170px;
+height: 30px;
+z-index: 1;
+border-radius: 0 0 40px 40px;
+font-weight: bold;
+}
+
+.menu_banner a#active {
+background-color: white;
+color: black;
+}
+
+.menu_banner .menu_about {
+float:right;	
+}
+
+/* end of properties for navigation menu */
+
+
+.banner_photo{
+background-color: #cccccc;
+height: 450px;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+position: relative;
+}
+
+.content_box{
+background-color: #2C2C2C;
+float: left;
+margin-right: 1%;
+margin-left: 1%;
+margin-bottom: 5%;
+border-radius: 40px 40px 40px 40px;
+box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.26)
+}
+
+/* Headline style 1
 .headline {
 text-align: center;
 position: absolute;
@@ -86,6 +138,20 @@ top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 color: white;
+}
+*/
+
+.headline {
+position: absolute;
+background-color: black;
+opacity: 0.85;
+padding-left: 50px;
+padding-right: 50px;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+color: white;
+z-index: 0;
 }
 
 #homepage_banner_photo{
@@ -104,6 +170,43 @@ margin-right: 280px;
 margin-left: 280px;
 }
 
+.content_box{
+background-color: #2C2C2C;
+float: left;
+margin-right: 1%;
+margin-left: 1%;
+margin-bottom: 5%;
+border-radius: 40px 40px 40px 40px;
+box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.26)
+}
+
+.product_box{
+background-color: #2C2C2C;
+display: inline-block;
+float: center;
+margin-left: 2%;
+margin-right: 2%;
+margin-bottom: 50px;
+padding: 2px;
+border-radius: 40px 40px 40px 40px;
+box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.26)
+}
+
+.product_card{
+float: left;
+background-color: white;
+margin: 0.2em;
+width: 300px;
+height: 400px;
+border-radius: 40px 40px 40px 40px;
+box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+display: inline-block;
+}
+
+.product_card:hover{
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
+}
+
 .intro_photos{
 display: inline-block;
 height: 200px;
@@ -111,72 +214,38 @@ width: 300px;
 margin: 1em;
 }
 
-
-.searchbox{
-float: center;
-top: 50%;
-left: 50%;
-border-radius: 40px;
-background: black;
-opacity: 0.8;
-height: 40px;
-padding: 10px;
-}
-
-.search_text{
-border: none;
-background: none;
-outline: none;
+.showcase_card{
 float: left;
-padding: 0;
-margin-left: 10px;
-color: white;
-font-size: 16px;
-font-weight: bold;
-line-height: 40px;
-width: 400px;
-}
-
-.search_button {
-background: url("mag.png") 0 0 no-repeat;
-color: white;
-border-radius: 40px;
-width: 40px;
-height: 40px;
-border: none;
-margin: 0;
-padding: 0;
-cursor: pointer;
-}
-
-.showcase_box{
-float: center;
 background-color: white;
 margin: 0.64em;
 width: 300px;
 height: 300px;
 border-radius: 0 0 40px 40px;
 box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-position: center;
 display: inline-block;
 }
 
+.showcase_card:hover{
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 2);
+}
 
-.transparent_header {
-background-color: black;
+.showcase_text{
+text-indent: 10px;
+color: black;
+}
+
+.product_text{
+color: black;
 text-align: center;
-opacity: 0.6;
-padding:0px;
-float:left;
-width:180px;
-height:40px;
-border-radius: 0 0 40px 40px;
 }
 
 #rent_banner_photo{
 background-image: url("apartment.jpg");
 }
 
+/* End of CSS by Ryan */
+
+/* Start of CSS by Alex */
 
 @import url(http://fonts.googleapis.com/css?family=Roboto:900,300);
  aboutmebody{
@@ -298,3 +367,51 @@ background-image: url("apartment.jpg");
   float: center;
   text-align: center;
 }
+
+/* End of CSS by Alex */
+
+
+/* CSS by Jonathan */
+
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=message], select {
+  width: 100%;
+  padding: 24px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: black;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #308e33;
+}
+
+div.content_box {
+  border-radius: 10px;
+  background-color: #2C2C2C;
+  padding: 20px;
+}
+
+/* End of CSS by Jonathan */
