--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ font-size:30px;
 h3 {
 font-size:40px;
 text-align: center;
-color: white;
+color: black;
 }
 
 h4 {
@@ -64,10 +64,6 @@ color: white;
 text-decoration: none;
 }
 
-a:hover, a:active {
-color: rgb(150,150,150);
-}
-
 /* end of block */
 
 
@@ -77,9 +73,6 @@ color: rgb(150,150,150);
 overflow: hidden;
 position: fixed;
 top: 0;
-border-radius: 0 0 50px 50px;
-margin-top: 0%;
-height: 40px;
 width: 100%;
 z-index: 1;
 box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
@@ -95,9 +88,55 @@ display: block;
 width: 170px;
 height: 30px;
 z-index: 1;
-border-radius: 0 0 40px 40px;
 font-weight: bold;
 }
+
+.menu_banner a:hover {
+background-color: white;
+color: black;
+}
+
+
+/* Dropdown css */
+
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.dropdown {
+display: block;
+}
+
+.dropdown-content {
+  display: none;
+  background-color: white;
+  z-index: 2;
+}
+
+.dropdown-content a {
+  text-decoration: none;
+  display: block;
+  width: 140px;
+  height: 30px;
+}
+
+.dropdown-content a:hover {
+background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+display: block;
+}
+
+/* ^ when hovering on the link, display changes from none to inline-block */
+
+.dropdown:hover .dropdown_link {
+background-color: white;
+color: black;
+}
+
+/* end of dropdown CSS */
 
 .menu_banner a#active {
 background-color: white;
@@ -107,6 +146,7 @@ color: black;
 .menu_banner .menu_about {
 float:right;	
 }
+
 
 /* end of properties for navigation menu */
 
@@ -120,15 +160,6 @@ background-size: cover;
 position: relative;
 }
 
-.content_box{
-background-color: #2C2C2C;
-float: left;
-margin-right: 1%;
-margin-left: 1%;
-margin-bottom: 5%;
-border-radius: 40px 40px 40px 40px;
-box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.26)
-}
 
 /* Headline style 1
 .headline {
@@ -155,12 +186,13 @@ z-index: 0;
 }
 
 #homepage_banner_photo{
-background-image: url("penang.jpg");
+background-image: url("images/homepage_banner_photo.jpg");
 }
 
-#enquiry_banner_photo{
-background-image: url("enquiry_banner_photo.jpg");
+#product_banner_photo{
+background-image: url("images/apartment.jpg");
 }
+
 
 .page_intro {
 font-family: "Montserrat", sans-serif;
@@ -170,35 +202,23 @@ margin-right: 280px;
 margin-left: 280px;
 }
 
-.content_box{
-background-color: #2C2C2C;
-float: left;
-margin-right: 1%;
-margin-left: 1%;
-margin-bottom: 5%;
-border-radius: 40px 40px 40px 40px;
-box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.26)
-}
-
 .product_box{
-background-color: #2C2C2C;
+background-color: white;
 display: inline-block;
 float: center;
 margin-left: 2%;
 margin-right: 2%;
 margin-bottom: 50px;
 padding: 2px;
-border-radius: 40px 40px 40px 40px;
 box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.26)
 }
 
 .product_card{
 float: left;
-background-color: white;
+background-color: #F9F9F9;
 margin: 0.2em;
 width: 300px;
 height: 400px;
-border-radius: 40px 40px 40px 40px;
 box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 display: inline-block;
 }
@@ -217,10 +237,9 @@ margin: 1em;
 .showcase_card{
 float: left;
 background-color: white;
-margin: 0.64em;
+margin: 1.1em;
 width: 300px;
 height: 300px;
-border-radius: 0 0 40px 40px;
 box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 display: inline-block;
 }
@@ -237,10 +256,6 @@ color: black;
 .product_text{
 color: black;
 text-align: center;
-}
-
-#product_banner_photo{
-background-image: url("apartment.jpg");
 }
 
 /* End of CSS by Ryan */
@@ -392,13 +407,11 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #308e33;
+  background-color: white;
 }
 
-div.content_box {
-  border-radius: 10px;
-  background-color: #2C2C2C;
-  padding: 20px;
+#enquiry_banner_photo{
+background-image: url("images/enquiry_banner_photo.jpg");
 }
 
 /* End of CSS by Jonathan */
@@ -407,7 +420,7 @@ div.content_box {
 
 .disclaimer {
 	font-family: "Montserrat", sans-serif;
-	color: black;
+	color: white;
 	font-size:22px;
 	margin-right: 280px;
 	margin-left: 280px;
@@ -416,7 +429,7 @@ div.content_box {
 #webmaster_email {
 	opacity: 1.0;
 	text-decoration: none;
-	color: black;
+	color: white;
 }
 
 /* End of CSS by Jeffrey */
