--- a/style.css
+++ b/style.css
@@ -476,4 +476,9 @@ display: inline-block;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 2);
 }
 
+.offices{
+	width: 300px;
+	height: 200px;
+}
+
 /* End of CSS by Jeffrey */
