apartments page completed

--- a/style.css
+++ b/style.css
@@ -244,12 +244,16 @@ box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 display: inline-block;
 }
 
+.showcase_card_link{
+text-align: right;
+}
+
 .showcase_card:hover{
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 2);
 }
 
 .showcase_text{
-text-indent: 10px;
+padding: 10px;
 color: black;
 }
 
@@ -432,7 +436,7 @@ background-image: url("images/enquiry_banner_photo.jpg");
 	color: white;
 }
 
-.showcase_card_offices{
+.showcase_card_products{
 float: left;
 background-color: white;
 margin: 1.1em;
@@ -442,8 +446,8 @@ box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 display: inline-block;
 }
 
-.showcase_card_offices:hover{
-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 2);
+.showcase_card_products:hover{
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 1;
 }
 
 /* End of CSS by Jeffrey */
