--- a/style.css
+++ b/style.css
@@ -466,7 +466,7 @@ background-image: url("images/enquiry_banner_photo.jpg");
 	color: black;
 }
 
-.showcase_card_products{
+.showcase_card_offices{
 float: left;
 background-color: white;
 margin: 1.1em;
@@ -476,8 +476,8 @@ box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 display: inline-block;
 }
 
-.showcase_card_products:hover{
-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 1;
+.showcase_card_offices:hover{
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 1);
 }
 
 .offices{
