shops & style.css

--- a/style.css
+++ b/style.css
@@ -448,6 +448,20 @@ input[type=submit]:hover {
 background-image: url("images/enquiry_banner_photo.jpg");
 }
 
+.showcase_card_shops{
+float: left;
+background-color: white;
+margin: 1.1em;
+width: 300px;
+height: 380px;
+box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+display: inline-block;
+}
+
+.showcase_card_shops:hover{
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 2);
+}
+
 /* End of CSS by Jonathan */
 
 /* Start of CSS by Jeffrey */
