--- a/style.css
+++ b/style.css
@@ -205,7 +205,6 @@ margin-left: 280px;
 .product_box{
 background-color: white;
 display: inline-block;
-float: center;
 margin-left: 2%;
 margin-right: 2%;
 margin-bottom: 50px;
@@ -295,7 +294,7 @@ text-align: center;
   overflow: hidden;
   height: 150px;
   width: 150px;
-  float: center;
+  float: none;
   position: relative;
   margin: auto;
   top: -60px;
@@ -304,7 +303,7 @@ text-align: center;
 }
 .avatar-flip img {
   position: absolute;
-  float: center;
+  float: none;
   left: 0;
   top: 0;
   border-radius: 100px;
@@ -370,7 +369,7 @@ text-align: center;
 }
 
 #email_foot {
-  float: center;
+  float: none;
   text-align: center;
 }
 
@@ -472,7 +471,7 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 2);
 	font-size:22px;
 	margin-right: 280px;
 	margin-left: 280px;
-	float: center;
+	float: none;
 	text-align: center;
 }
 
@@ -502,7 +501,7 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 1);
 }
 
 #disclaimer_foot{
-	float: center;
+	float: none;
 	text-align: center;
 }
 
