--- a/style.css
+++ b/style.css
@@ -231,8 +231,8 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
 .intro_photos{
 display: inline-block;
 height: 200px;
-width: 300px;
-margin: 1em;
+width: 290px;
+margin: 0.2em;
 }
 
 .showcase_card{
@@ -545,9 +545,14 @@ box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 display: inline-block;
 }
 
-.centering {
+.centering_about {
   margin: auto;
   width: 71%;
+}
+
+.centering_index {
+  margin: auto;
+  width: 90%;
 }
 
 /* End of CSS by Jeffrey */
